@@ -5,6 +5,11 @@
 
 	* Temp.pm: seekable test was failing on perl 5.6.0 so we now skip the 
 	specific test. (thanks to Zefram)
+
+	* Temp.pm: Remove the test on the parent directory to see if a file
+	can be written. This will be found out anyway as soon as the file open
+	is attempted. AFS systems may fail a -w test but still allow a file to
+	be created. (thanks to Christopher Ellison)
 	
 2008-03-15 Tim Jenness <tjenness@cpan.org>
 
